--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
             },
          };
       </script>
+      <!-- custom css -->
+      <style>
+         .fontManrope {
+            font-family: "Manrope", sans-serif;
+         }
+      </style>
    </head>
-   <body class="bg-white">
+   <body class="bg-white fontManrope">
       <header>
          <!-- navbar section -->
          <section class="container mx-auto py-7 lg:py-12">
@@ -90,18 +96,18 @@
                      <li><a>Contact</a></li>
                   </ul>
                </div>
-               <div class="navbar-end flex gap-6">
+               <div class="navbar-end flex gap-3">
                   <div class="hidden lg:flex">
                      <i class="fa-solid fa-magnifying-glass"></i>
                   </div>
-                  <a class="btn bg-primaryColor text-lg lg:text-xl"
+                  <a class="btn bg-primaryColor text-lg lg:text-xl font-bold"
                      >Get Ticket</a
                   >
                </div>
             </div>
          </section>
          <!-- carousel slider section -->
-         <section class="container mx-auto relative">
+         <section class="container mx-auto relative mb-8 lg:mb-20">
             <div class="carousel w-full">
                <!-- slider 1 -->
                <div id="slide1" class="carousel-item relative w-full h-[70vh]">
@@ -190,5 +196,172 @@
             </div>
          </section>
       </header>
+      <main>
+         <!-- professional Hockeys Club section -->
+         <section class="container mx-auto">
+            <!-- professional Hockeys Club -->
+            <div class="border-y-2 border-dashed">
+               <div class="p-4 lg:p-8 w-full lg:w-3/5 mx-auto text-center">
+                  <h2
+                     class="text-titleColor text-xl lg:text-4xl font-extrabold mb-4 lg:mb-6"
+                  >
+                     Professional Hockeys Club
+                  </h2>
+                  <p class="text-sm lg:text-base font-medium">
+                     Dit amet consectetur. Condimentum dignissim adipiscing
+                     aliquam turpis placerat dolor. Purus urna in sit nullam
+                     proin.
+                  </p>
+               </div>
+            </div>
+            <!-- percentage of quality -->
+            <div
+               class="p-4 lg:p-8 w-full lg:w-11/12 mx-auto grid grid-cols-1 lg:grid-cols-4 gap-8 mt-5 lg:mt-12"
+            >
+               <div class="text-center">
+                  <div
+                     class="radial-progress text-[#FF4240]"
+                     style="--value: 87"
+                     role="progressbar"
+                  >
+                     <span class="text-black">87%</span>
+                  </div>
+                  <h3 class="text-titleColor text-xl font-semibold mt-5 mb-4">
+                     Prayer Facility
+                  </h3>
+                  <p class="text-descriptionColor text-base font-normal">
+                     Amet consectetur. Condimentum dignissim adipiscing .
+                  </p>
+               </div>
+               <div class="text-center">
+                  <div
+                     class="radial-progress text-[#49D293]"
+                     style="--value: 95"
+                     role="progressbar"
+                  >
+                     <span class="text-black">95%</span>
+                  </div>
+                  <h3 class="text-titleColor text-xl font-semibold mt-5 mb-4">
+                     Experienced Coach
+                  </h3>
+                  <p class="text-descriptionColor text-base font-normal">
+                     Amet consectetur. Condimentum dignissim adipiscing .
+                  </p>
+               </div>
+               <div class="text-center">
+                  <div
+                     class="radial-progress text-[#FFB546]"
+                     style="--value: 90"
+                     role="progressbar"
+                  >
+                     <span class="text-black">90%</span>
+                  </div>
+                  <h3 class="text-titleColor text-xl font-semibold mt-5 mb-4">
+                     Senior Player
+                  </h3>
+                  <p class="text-descriptionColor text-base font-normal">
+                     Amet consectetur. Condimentum dignissim adipiscing .
+                  </p>
+               </div>
+               <div class="text-center">
+                  <div
+                     class="radial-progress text-[#4C8DF1]"
+                     style="--value: 80"
+                     role="progressbar"
+                  >
+                     <span class="text-black">80%</span>
+                  </div>
+                  <h3 class="text-titleColor text-xl font-semibold mt-5 mb-4">
+                     Training Ground
+                  </h3>
+                  <p class="text-descriptionColor text-base font-normal">
+                     Amet consectetur. Condimentum dignissim adipiscing .
+                  </p>
+               </div>
+            </div>
+         </section>
+         <!-- program section -->
+         <section class="container mx-auto">
+            <!-- program -->
+            <div
+               class="p-4 lg:p-8 text-center border-y-2 border-dashed mt-4 lg:mt-12"
+            >
+               <h2
+                  class="text-titleColor text-xl lg:text-4xl font-extrabold mb-4 lg:mb-6"
+               >
+                  Program Sections
+               </h2>
+               <p
+                  class="w-full lg:w-3/5 mx-auto text-sm lg:text-base font-medium"
+               >
+                  Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                  turpis placerat dolor. Purus urna in sit nullam proin.
+               </p>
+            </div>
+            <!-- some programs -->
+            <div
+               class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-3 lg:mt-12 p-4 lg:p-8"
+            >
+               <!-- program 1 -->
+               <div
+                  class="p-4 lg:p-10 flex flex-col justify-end bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.2)),url(./images/2.png)] bg-cover bg-center rounded-2xl"
+               >
+                  <h2 class="text-white text-xl lg:text-3xl font-extrabold">
+                     Junior Program
+                  </h2>
+                  <p
+                     class="text-white text-sm lg:text-base font-semibold my-5 lg:my-6"
+                  >
+                     Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                     Elit elit enim sagittis turpis in magna. Id et sed euismod
+                     natoque amet nunc morbi nulla. Tortor congue sed et in.
+                  </p>
+                  <button class="w-32 btn bg-primaryColor text-white border-0">
+                     Register Now!
+                  </button>
+               </div>
+               <!-- program 2 -->
+               <div
+                  class="p-4 lg:p-10 flex flex-col justify-end bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.2)),url(./images/3.png)] bg-cover bg-center rounded-2xl"
+               >
+                  <h2 class="text-white text-xl lg:text-3xl font-extrabold">
+                     Teenager Program
+                  </h2>
+                  <p
+                     class="text-white text-sm lg:text-base font-semibold my-5 lg:my-6"
+                  >
+                     Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                     Elit elit enim sagittis turpis in magna. Id et sed euismod
+                     natoque amet nunc morbi nulla. Tortor congue sed et in.
+                  </p>
+                  <button
+                     class="w-32 btn bg-primaryColor text-white inline border-0"
+                  >
+                     Register Now!
+                  </button>
+               </div>
+               <!-- program 3 -->
+               <div
+                  class="lg:h-[450px] lg:col-span-2 p-4 lg:p-10 flex flex-col justify-end bg-[linear-gradient(45deg,rgba(0,0,0,0.6),rgba(0,0,0,0.2)),url(./images/4.png)] bg-cover bg-center rounded-2xl"
+               >
+                  <h2 class="text-white text-xl lg:text-3xl font-extrabold">
+                     Professional Program
+                  </h2>
+                  <p
+                     class="text-white text-sm lg:text-base font-semibold my-5 lg:my-6"
+                  >
+                     Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                     Elit elit enim sagittis turpis in magna. Id et sed euismod
+                     natoque amet nunc morbi nulla. Tortor congue sed et in.
+                  </p>
+                  <button
+                     class="w-32 btn bg-primaryColor text-white inline border-0"
+                  >
+                     Register Now!
+                  </button>
+               </div>
+            </div>
+         </section>
+      </main>
    </body>
 </html>
