footer top margin added

--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
             </div>
          </section>
       </main>
-      <footer class="bg-titleColor p-10 lg:px-32 lg:py-24">
+      <footer class="bg-titleColor p-10 lg:px-32 lg:py-24 mt-10 lg:mt-24">
          <div class="text-[#FFFFFF99] flex flex-col lg:flex-row items-center lg:items-start gap-10 lg:gap-36">
             <!-- first column -->
             <div class="text-[#FFFFFF99]">
